objects/MLHK_CCT_ANS_Message_Settings__c/MLHK_CCT_ANS_Message_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>MLHK_CCT_ANS_Message_Settings</label>
</CustomObject>