objects/MLHK_CCT_ANS_Message_Settings__c/fields/ANS_Code__c.field-meta.xml
<CustomField>
    <fullName>ANS_Code__c</fullName>
    <label>ANS Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>