objects/MLHK_CCT_ANS_Message_Settings__c/fields/Call_result__c.field-meta.xml
<CustomField>
    <fullName>Call_result__c</fullName>
    <label>Call result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>