objects/MLHK_CCT_ANS_Message_Settings__c/fields/Default_Value_of_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Default_Value_of_Transaction__c</fullName>
    <label>Default Value of Transaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>