objects/MLHK_CCT_ANS_Message_Settings__c/fields/Display_in_AWS_To_Do_List__c.field-meta.xml
<CustomField>
    <fullName>Display_in_AWS_To_Do_List__c</fullName>
    <label>Display in AWS To Do List</label>
    <length>10</length>
    <type>Text</type>
</CustomField>