objects/MLHK_CCT_ANS_Message_Settings__c/fields/Send_To_Immediate_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Send_To_Immediate_Supervisor__c</fullName>
    <label>Send To Immediate Supervisor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>