objects/MLHK_CCT_ANS_Message_Settings__c/fields/Standard_ANS_Message_for_Advisor_Part_2__c.field-meta.xml
<CustomField>
    <fullName>Standard_ANS_Message_for_Advisor_Part_2__c</fullName>
    <label>Standard ANS Message for Advisor Part 2</label>
    <type>TextArea</type>
</CustomField>