objects/MLHK_CCT_ANS_Message_Settings__c/fields/Standard_Message_for_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Standard_Message_for_Supervisor__c</fullName>
    <label>Standard Message for Supervisor</label>
    <type>TextArea</type>
</CustomField>