objects/MLHK_CCT_ANS_Message_Settings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ANS_Code__c</columns>
    <columns>Call_result__c</columns>
    <columns>Default_Value_of_Action_Priority__c</columns>
    <columns>Default_Value_of_Source_Type__c</columns>
    <columns>Default_Value_of_Transaction__c</columns>
    <columns>Display_in_AWS_To_Do_List__c</columns>
    <columns>Send_To_Immediate_Supervisor__c</columns>
    <columns>Standard_ANS_Message_for_Advisor_Part_1__c</columns>
    <columns>Standard_ANS_Message_for_Advisor_Part_2__c</columns>
    <columns>Standard_Message_for_Supervisor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>